# 1stMud

CVS/: Repository
area/: air.are  area.lst  battlefi.are  chapel.are  darena.are  hood.are  immort.are  limbo.are  midgaard.are  pestates.are  quest.are  school.are
area/CVS/: Entries  Repository
backup/CVS/: Repository
data/: .cvsignore
data/CVS/: Entries  Repository
data/i3/: i3.channels  i3.color  i3.commands  i3.config  i3.help  i3.routers
data/i3/CVS/: Entries  Repository
doc/1stMud/: CHANGES  CREDITS  FAQ  LICENSE
doc/1stMud/CVS/: Entries  Repository
doc/CVS/: Repository
doc/Diku/CVS/: Entries  Repository
doc/MPDocs/: New_README.txt  Programs.doc
doc/MPDocs/CVS/: Entries  Repository
doc/Merc/CVS/: Entries  Repository
doc/Rom/CVS/: Entries  Repository
log/CVS/: Repository
notes/CVS/: Entries  Repository
player/CVS/: Repository
player/backup/CVS/: Repository
player/deleted/CVS/: Repository
src/: Makefile  act_comm.c  act_enter.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  alias.c  ansi.c  arena.c  auction.c  automap.c  ban.c  board.c  buddy.c  channels.c  clans.c  client.c  comm.c  const.c  data_table.c  db.c  db2.c  economy.c  effects.c  explored.c  fight.c  fileio.c  flags.c  gquest.c  handler.c  healer.c  homes.c  hunt.c  i3.c  ignore.c  interp.c  logs.c  lookup.c  magic.c  (+29 more)
src/CVS/: Entries  Repository
src/config/: Makefile.fail  Makefile.in  autoconf.html  config.depend  config.h.in  configure  configure.in  gdbinit.in  indent.pro.in  setup.sh  template.h  template.sh
src/config/CVS/: Entries  Repository
src/h/: ansi.h  bits.h  comm_descriptor.h  comm_prompt.h  data_table.h  defines.h  dofun.h  fileio.h  globals.h  i3.h  index.h  interp.h  macro.h  magic.h  merc.h  olc.h  olc_create.h  olc_delete.h  olc_dofun.h  olc_ed.h  olc_list.h  olc_validate.h  prog_cmds.h  proto.h  recycle.h  special.h  structs.h  tables.h  telnet.h  typedef.h  vnums.h
src/h/CVS/: Entries  Repository
src/o/CVS/: Repository  Root
win/: 1stMud.dsp  1stMud.dsw  backup.bat  install.bat  startup.bat  zconf.h  zlib.html
win/CVS/: Entries  Repository
